kubernetes/apps/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: main
      namespace: network
      sectionName: https-root
  hostnames:
    - "zlaya.tech"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
